Enable git detekt check

--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -11,4 +11,4 @@ jobs:
           java-version: 1.8
       - name: detekt
         run: |
-          ./gradlew clean detektCheck || true
+          ./gradlew clean detekt
