--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.github.benmanes.gradle.versions.VersionsPlugin
+
 buildscript {
     apply from: "$rootDir/buildsystem/dependencies.gradle"
 
@@ -5,6 +7,7 @@ buildscript {
         jcenter()
         mavenCentral()
         google()
+        gradlePluginPortal()
     }
 
     dependencies {
@@ -14,6 +17,7 @@ buildscript {
         classpath libraries.dokka
         classpath libraries.oss
         classpath libraries.detekt
+        classpath libraries.gradle_versions
     }
 }
 
@@ -35,6 +39,17 @@ detekt {
 
 
 allprojects {
+    apply plugin: VersionsPlugin
+
+    def isNonStable = { String version ->
+        def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any {  version.toUpperCase().contains(it) }
+        def regex = /^[0-9,.v-]+(-r)?$/
+        return !stableKeyword && !(version ==~ regex)
+    }
+
+    tasks.named("dependencyUpdates").configure {
+        rejectVersionIf {isNonStable(it.candidate.version)}
+    }
     repositories {
         jcenter()
     }
