--- a/.github/workflows/guthub-pages.yml
+++ b/.github/workflows/guthub-pages.yml
@@ -10,10 +10,9 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
       - uses: actions/checkout@v2
-      - uses: helaili/jekyll-action@2.0.4
-        env:
-          JEKYLL_PAT: ${{ secrets.GH_TOKEN }}
+      - uses: helaili/jekyll-action@v2
         with:
-          jekyll_src: docs
-          target_branch: gh-pages
-          gem_src: docs
+          jekyll_src: 'docs'
+          target_branch: 'gh-pages'
+          token: ${{ secrets.GH_TOKEN }}
+
