--- a/.github/workflows/guthub-pages.yml
+++ b/.github/workflows/guthub-pages.yml
@@ -10,9 +10,16 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
       - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+          uses: actions/setup-java@v1
+          with:
+            java-version: 1.8
+            - name: dokkaHtml
+              run: |
+                ./gradlew clean dokkaHtml
       - uses: helaili/jekyll-action@v2
         with:
-          jekyll_src: 'docs'
+          jekyll_src: 'html'
           target_branch: 'gh-pages'
           token: ${{ secrets.GH_TOKEN }}
 
