--- a/.github/workflows/guthub-pages.yml
+++ b/.github/workflows/guthub-pages.yml
@@ -9,17 +9,17 @@ jobs:
   github-pages:
     runs-on: ubuntu-16.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Set up JDK 1.8
-          uses: actions/setup-java@v1
-          with:
-            java-version: 1.8
-            - name: dokkaHtml
-              run: |
-                ./gradlew clean dokkaHtml
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: detekt
+        run: |
+          ./gradlew clean detekt
       - uses: helaili/jekyll-action@v2
         with:
-          jekyll_src: 'html'
+          jekyll_src: 'docs'
           target_branch: 'gh-pages'
           token: ${{ secrets.GH_TOKEN }}
 
