--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -1,4 +1,4 @@
-name: project
+name: pr-check
 on: [ push, pull_request ]
 jobs:
   detekt:
@@ -12,3 +12,27 @@ jobs:
       - name: detekt
         run: |
           ./gradlew clean detekt
+
+  sample-app-check:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: sample-assemble-debug
+        run: |
+          ./gradlew sample:assembleDebug
+
+  kakao-library-check:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: kakao-library-build
+        run: |
+          ./gradlew kakao:build
