--- a/.github/workflows/pr-sample-connected-checks.yml
+++ b/.github/workflows/pr-sample-connected-checks.yml
@@ -1,5 +1,5 @@
-name: pull_request-check
-on: [ push, pull_request ]
+name: sample-connected-checks
+on: [ pull_request ]
 jobs:
   sample-connectedCheck-api21:
     runs-on: macos-latest
@@ -46,5 +46,5 @@ jobs:
       - name: connectedCheck
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 30
+          api-level: 29
           script: ./gradlew sample:connectedCheck
