--- a/.github/workflows/pr-sample-connected-checks.yml
+++ b/.github/workflows/pr-sample-connected-checks.yml
@@ -1,50 +1,24 @@
 name: sample-connected-checks
 on: [ pull_request ]
 jobs:
-  sample-connectedCheck-api21:
-    runs-on: macos-latest
+  integration-test:
+    runs-on: macOS-10.15
+    strategy:
+      matrix:
+        api: [ 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
     steps:
-    - name: checkout
-      uses: actions/checkout@v2
-
-    - name: connectedCheck
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
-        api-level: 21
-        script: ./gradlew sample:connectedCheck
-
-  sample-connectedCheck-api24:
-    runs-on: macos-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: connectedCheck
-        uses: reactivecircus/android-emulator-runner@v2
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          api-level: 24
-          script: ./gradlew sample:connectedCheck
-
-  sample-connectedCheck-api27:
-    runs-on: macos-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
+          java-version: 1.8
+      - uses: malinskiy/action-android/install-sdk@release/0.1.1
       - name: connectedCheck
-        uses: reactivecircus/android-emulator-runner@v2
+        uses: malinskiy/action-android/emulator-run-cmd@release/0.1.1
+        timeout-minutes: 30
         with:
-          api-level: 27
-          script: ./gradlew sample:connectedCheck
-
-  sample-connectedCheck-api30:
-    runs-on: macos-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: connectedCheck
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          script: ./gradlew sample:connectedCheck
+          cmd: ./gradlew connectedCheck
+          cmdOptions: -no-snapshot-save -noaudio -no-boot-anim -cores 2 -memory 3072 -no-window -gpu swiftshader_indirect
+          api: ${{ matrix.api }}
+          tag: google_apis
+          abi: x86
