--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -6,11 +6,6 @@ complexity:
     ignoreAnnotation: true
     excludeStringsWithLessThan5Characters: true
     ignoreStringsRegex: '$^'
-  ComplexInterface:
-    active: true
-    threshold: 10
-    includeStaticDeclarations: false
-    includePrivateDeclarations: false
   ComplexMethod:
     active: true
     ignoreSingleWhenExpression: true
@@ -82,6 +77,7 @@ style:
     values: ['TODO:', 'FIXME:', 'STOPSHIP:', '@author', '@requiresTypeResolution']
   MaxLineLength:
     active: true
+    maxLineLength: 160
     excludes: ['**/test/**', '**/*Test.kt', '**/*Spec.kt']
     excludeCommentStatements: true
   MagicNumber:
