Lib update release (#43)
* Change target 31

* Update versions

* Update version

* enambe multidex

* Add multidex for google map

* Add JVM args

* Ignore tests

* Update GoogleMapsTest.kt

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:theme="@style/AppTheme" />
     <activity
         android:name="io.github.kakaocup.sample.TestActivity"
+        android:exported="true"
         android:label="Test Activity"
         android:theme="@style/AppTheme">
       <intent-filter>
