Add support for compound drawables

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -97,6 +97,11 @@
         android:label="Linear Layout activity"
         android:theme="@style/MaterialAppTheme" />
 
+    <activity
+        android:name="io.github.kakaocup.sample.TextActivity"
+        android:label="Text activity"
+        android:theme="@style/MaterialAppTheme" />
+
     <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="@string/google_map_key" />
