Shift emulators apis +3

--- a/.github/workflows/pr-sample-connected-checks.yml
+++ b/.github/workflows/pr-sample-connected-checks.yml
@@ -6,7 +6,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        api: [ 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
+        api: [ 24, 25, 26, 28, 29, 30, 31, 32, 33 ]
+        abi: [x86_64]
+        include:
+          - api: 27
+            abi: x86
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 1.8
@@ -22,4 +26,4 @@ jobs:
           cmdOptions: -no-snapshot-save -noaudio -no-boot-anim -cores 2 -memory 3072 -no-window -gpu swiftshader_indirect
           api: ${{ matrix.api }}
           tag: google_apis
-          abi: x86
+          abi: ${{ matrix.abi }}
