--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -102,6 +102,11 @@
         android:label="Text activity"
         android:theme="@style/MaterialAppTheme" />
 
+    <activity
+        android:name="io.github.kakaocup.sample.ImageViewActivity"
+        android:label="Text activity"
+        android:theme="@style/MaterialAppTheme" />
+
     <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="@string/google_map_key" />
