--- a/.github/workflows/pr-sample-connected-checks.yml
+++ b/.github/workflows/pr-sample-connected-checks.yml
@@ -2,7 +2,7 @@ name: sample-connected-checks
 on: [ pull_request ]
 jobs:
   integration-test:
-    runs-on: macOS-10.15
+    runs-on: macOS-latest
     strategy:
       fail-fast: false
       matrix:
