--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -109,6 +109,10 @@
         android:name="io.github.kakaocup.sample.ButtonClickActivity"
         android:label="Text activity"
         android:theme="@style/MaterialAppTheme" />
+    <activity
+        android:name="io.github.kakaocup.sample.ButtonDoubleClickActivity"
+        android:label="Text activity"
+        android:theme="@style/MaterialAppTheme" />
   </application>
 
 </manifest>
