--- a/.github/workflows/pr-sample-connected-checks.yml
+++ b/.github/workflows/pr-sample-connected-checks.yml
@@ -1,29 +1,72 @@
-name: sample-connected-checks
+name: PR
 on: [ pull_request ]
 jobs:
-  integration-test:
-    runs-on: macOS-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        api: [ 24, 25, 26, 28, 29, 30, 31, 32, 33 ]
-        abi: [ x86_64 ]
-        include:
-          - api: 27
-            abi: x86
+  detekt:
+    runs-on: ubuntu-latest
+    name: Detekt
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - uses: malinskiy/action-android/install-sdk@release/0.1.1
-      - name: connectedCheck
-        uses: malinskiy/action-android/emulator-run-cmd@release/0.1.1
-        timeout-minutes: 30
+      - name: detekt
+        run: |
+          ./gradlew clean detekt
+
+  assemble-debug-apk:
+    needs: [ detekt ]
+    name: Assemble Debug APK
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          cmd: ./gradlew connectedCheck
-          cmdOptions: -no-snapshot-save -noaudio -no-boot-anim -cores 2 -memory 3072 -no-window -gpu swiftshader_indirect
-          api: ${{ matrix.api }}
-          tag: google_apis
-          abi: ${{ matrix.abi }}
+          java-version: 11
+      - name: Assemble Debug APK
+        run: bash ./gradlew sample:assembleDebug
+      - name: Upload app APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: sample/build/outputs/apk/debug/sample-debug.apk
+
+  assemble-debug-android-test-apk:
+    needs: [ detekt ]
+    name: Assemble Instrumental APK
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble Instrumental APK
+        run: bash ./gradlew sample:assembleDebugAndroidTest
+      - name: Upload app APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: sample/build/outputs/apk/androidTest/debug/sample-debug-androidTest.apk
+
+  firebase-lab-test:
+    needs: [ assemble-debug-apk, assemble-debug-android-test-apk ]
+    name: Firebase Instrumental API
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        api: [ 30 ]
+    steps:
+      - uses: actions/checkout@v1
+      - name: Download APKs
+        uses: actions/download-artifact@v1
+        with:
+          name: apk
+      - name: Run tests on Firebase Test Lab for ${{ matrix.api }}
+        uses: asadmansr/Firebase-Test-Lab-Action@v1.0
+        with:
+          arg-spec: .github/firebase/devices-specs.yml:api-${{ matrix.api }}
+        env:
+          SERVICE_ACCOUNT: ${{ secrets.FIREBASE_TESTLAB_JSON }}
