--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -67,10 +67,9 @@ jobs:
       - name: Run tests on Firebase Test Lab for API ${{ matrix.api }}
         uses: vacxe/firebase-test-lab-action@0.0.5
         with:
+          service-account: ${{ secrets.FIREBASE_TESTLAB_JSON }}
           app: apk/sample-debug.apk
           test: apk/sample-debug-androidTest.apk
           device-id: MediumPhone.arm
           os-version-id: ${{ matrix.api }}
           num-flaky-test-attempts: 4
-        env:
-          SERVICE_ACCOUNT: ${{ secrets.FIREBASE_TESTLAB_JSON }}
