--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -5,11 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Detekt
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: "temurin"
+          java-version: 17
       - name: detekt
         run: |
           ./gradlew clean detekt
@@ -19,15 +20,16 @@ jobs:
     name: Assemble Debug APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: "temurin"
+          java-version: 17
       - name: Assemble Debug APK
         run: bash ./gradlew sample:assembleDebug
       - name: Upload app APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: apk
           path: sample/build/outputs/apk/debug/sample-debug.apk
@@ -37,15 +39,16 @@ jobs:
     name: Assemble Instrumental APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: "temurin"
+          java-version: 17
       - name: Assemble Instrumental APK
         run: bash ./gradlew sample:assembleDebugAndroidTest
       - name: Upload app APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: apk
           path: sample/build/outputs/apk/androidTest/debug/sample-debug-androidTest.apk
