--- a/.github/workflows/release-deploy-ext-clicks.yml
+++ b/.github/workflows/release-deploy-ext-clicks.yml
@@ -5,11 +5,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: "temurin"
+          java-version: 17
       - uses: little-core-labs/get-git-tag@v3.0.2
       - name: deploy-release-ext-clicks
         run: ./gradlew :kakao-ext-clicks:publishDefaultPublicationToOSSHRRepository -PreleaseMode=RELEASE --stacktrace
