--- a/kakao/src/main/AndroidManifest.xml
+++ b/kakao/src/main/AndroidManifest.xml
@@ -1,5 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="io.github.kakaocup.kakao">
-
-  <application />
-</manifest>
+<manifest />
