some gradle-related cleanup:
- use centralized repository declaration
- disable jetifier
- enable configuration cache
- use convention plugins to prevent scripts duplication

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.jvmargs=-Xmx4096m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.configuration-cache=true
