--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -77,7 +77,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        api: [ 26, 27, 28, 29, 30, 31, 32, 33 ]
+        api: [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36 ]
     steps:
       - uses: actions/checkout@v1
       - name: Download Debug APK
